--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: BestCasino
 main: Coline\Casino\BestCasinoMain
 author: Алексей
-version: 1.2
-api: [2.0.0, 3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
+version: 1.2.2
+api: [2.0.0, 3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
 load: STARTUP
 website: infomcpe.ru
 commands:
