--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/ColineServices"]
 	path = src/ColineServices
-	url = https://github.com/ColineTeam/ColineServices
+	url = https://github.com/ColineTeam/ColineServices.git
