dump version and api

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: BestCasino
 main: Coline\Casino\BestCasinoMain
 author: ColineTeam
-version: 2.0
-api: [2.0.0, 3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
+version: 2.1
+api: [3.0.0-ALPHA12, 3.0.0]
 load: STARTUP
 website: pmine.ru
 commands:
